docs/styles/base.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
}

$x-govuk-code-color: #d13118;

.govuk-header {
  background-color: #f1f1f1;

  .govuk-header__link, .govuk-header__link:visited {
    color: #15141A;
  }

  .govuk-header__logo img {
    vertical-align: bottom;
  }

  .app-site-search {
    @media (max-width: 62.25em) {
      width: 100%;
      margin-bottom: 10px;
    }
  }
}

.x-govuk-code__string,
.x-govuk-code__doctag {
  color: $x-govuk-code-color;
}

.x-govuk-related-navigation .govuk-link[aria-current] {
  font-weight: bold;
}

// Allows feedback banner to have correct bottom margin.
.x-govuk-masthead {
  margin-top: 0;
}

.govuk-header label.govuk-visually-hidden {
  color: black;
}

.govuk-breadcrumbs__link {
  display: inline-block;
  min-height: 24px;
}

